# AndroidMedia

./: .gitignore  README.md  build.gradle  settings.gradle
appMain/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
appMain/src/assets/filter/: Note.txt
appMain/src/assets/filter/bigeye/: fragment_shader.glsl
appMain/src/assets/filter/blur/: fragment_shader.glsl
appMain/src/jni/: gl_drawer.cpp  jni_gl_draw.cpp
appMain/src/jni/header/: gl_drawer.h  jni_gl_draw.h
appMain/src/res/anim/: anim_slide_down.xml  anim_slide_up.xml
appMain/src/res/drawable/: selector_check_up_and_down.xml  shape_beauty_panel_bg.xml  shape_beauty_panel_white_bg.xml  shape_border_gray.xml  shape_common_button_sel.xml  shape_common_button_unsel.xml  shape_radio_button_unsel.xml
appMain/src/res/layout/: activity_camera_video_recorde.xml  activity_fbo_process_image.xml  activity_gl_render_1.xml  activity_gl_render_3.xml  activity_gl_render_4.xml  activity_gl_render_5.xml  activity_gl_render_6.xml  activity_main.xml  activity_mediacodec_1.xml  activity_mediacodec_2.xml  activity_mediacodec_3.xml  activity_show_image.xml  activity_video_recorde.xml  dialog_show_image_dilaog.xml  dilaog_beauty_set_layout.xml  item_activity.xml  item_audio_file.xml  item_video_file.xml
appMain/src/res/values/: colors.xml  styles.xml
appMain/src/res/xml/: filepaths.xml
mp3lame/: CMakeLists.txt  build.gradle
mp3lame/src/: AndroidManifest.xml
mp3lame/src/cpp/: LameEngine.cpp  LameEngine.h  lame3_encorder.cpp  lame3_encorder.h  lame_engine.cpp  lame_engine.h
mp3lame/src/cpp/lame/: fft.c
(+243 files in other folders)
